ferritin/src/snapshots/ferritin__tests__get_trait_complex_json.snap
---
source: ferritin/src/tests.rs
expression: "render_json_for_tests_rooted(Commands::get(\"crate::ComplexTrait\"), &\nget_fixture_crate_path ())"
---
{
  "canonicalUrl": "https://docs.rs/fixture-crate/0.1.0/fixture_crate/trait.ComplexTrait.html",
  "meta": {
    "name": "ComplexTrait",
    "kind": "trait",
    "visibility": "public",
    "definedAt": "fixture_crate::ComplexTrait",
    "crateName": "fixture-crate",
    "crateVersion": "0.1.0"
  },
  "docs": [
    {
      "type": "truncatedBlock",
      "nodes": [
        {
          "type": "paragraph",
          "spans": [
            {
              "text": "A more complex trait demonstrating various features",
              "style": "Plain"
            }
          ]
        }
      ],
      "level": "Full"
    }
  ],
  "body": {
    "kind": "trait",
    "name": "ComplexTrait",
    "generics": [
      {
        "text": "<",
        "style": "Punctuation"
      },
      {
        "text": "T",
        "style": "Generic"
      },
      {
        "text": ">",
        "style": "Punctuation"
      }
    ],
    "supertraits": [
      {
        "text": "PartialEq",
        "style": "TypeName",
        "url": "https://doc.rust-lang.org/nightly/core/cmp/trait.PartialEq.html",
        "path": "core::cmp::PartialEq"
      },
      {
        "text": " + ",
        "style": "Plain"
      },
      {
        "text": "std::fmt::Debug",
        "style": "TypeName",
        "url": "https://doc.rust-lang.org/nightly/core/fmt/trait.Debug.html",
        "path": "core::fmt::Debug"
      }
    ],
    "whereClause": [
      {
        "text": " ",
        "style": "Plain"
      },
      {
        "text": "where",
        "style": "Keyword"
      },
      {
        "text": " ",
        "style": "Plain"
      },
      {
        "text": "T",
        "style": "Generic"
      },
      {
        "text": ":",
        "style": "Punctuation"
      },
      {
        "text": " ",
        "style": "Plain"
      },
      {
        "text": "Clone",
        "style": "TypeName",
        "url": "https://doc.rust-lang.org/nightly/core/clone/trait.Clone.html",
        "path": "core::clone::Clone"
      },
      {
        "text": " + ",
        "style": "Plain"
      },
      {
        "text": "Send",
        "style": "TypeName",
        "url": "https://doc.rust-lang.org/nightly/core/marker/trait.Send.html",
        "path": "core::marker::Send"
      }
    ],
    "members": [
      {
        "name": "Output",
        "kind": "type",
        "signature": [
          {
            "text": "type",
            "style": "Keyword"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "Output",
            "style": "TypeName"
          },
          {
            "text": ":",
            "style": "Punctuation"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "std::fmt::Display",
            "style": "TypeName",
            "url": "https://doc.rust-lang.org/nightly/core/fmt/trait.Display.html",
            "path": "core::fmt::Display"
          },
          {
            "text": ";",
            "style": "Punctuation"
          }
        ],
        "docs": [
          {
            "type": "truncatedBlock",
            "nodes": [
              {
                "type": "paragraph",
                "spans": [
                  {
                    "text": "An associated type",
                    "style": "Plain"
                  }
                ]
              }
            ],
            "level": "SingleLine"
          }
        ]
      },
      {
        "name": "MAX_SIZE",
        "kind": "const",
        "signature": [
          {
            "text": "const",
            "style": "Keyword"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "MAX_SIZE",
            "style": "Plain"
          },
          {
            "text": ":",
            "style": "Punctuation"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "usize",
            "style": "TypeName"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "=",
            "style": "Operator"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "100",
            "style": "InlineRustCode"
          },
          {
            "text": ";",
            "style": "Punctuation"
          }
        ],
        "docs": [
          {
            "type": "truncatedBlock",
            "nodes": [
              {
                "type": "paragraph",
                "spans": [
                  {
                    "text": "An associated constant",
                    "style": "Plain"
                  }
                ]
              }
            ],
            "level": "SingleLine"
          }
        ]
      },
      {
        "name": "process",
        "kind": "method",
        "signature": [
          {
            "text": "fn",
            "style": "Keyword"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "process",
            "style": "Plain",
            "url": "https://docs.rs/fixture-crate/0.1.0/fixture_crate/trait.ComplexTrait.html#method.process",
            "path": "fixture_crate::ComplexTrait::process"
          },
          {
            "text": "(",
            "style": "Punctuation"
          },
          {
            "text": "&",
            "style": "Punctuation"
          },
          {
            "text": "self",
            "style": "Plain"
          },
          {
            "text": ",",
            "style": "Punctuation"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "input",
            "style": "Plain"
          },
          {
            "text": ":",
            "style": "Punctuation"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "T",
            "style": "Generic"
          },
          {
            "text": ")",
            "style": "Punctuation"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "->",
            "style": "Operator"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "Self",
            "style": "Generic"
          },
          {
            "text": "::",
            "style": "Punctuation"
          },
          {
            "text": "Output",
            "style": "TypeName"
          },
          {
            "text": ";",
            "style": "Punctuation"
          }
        ],
        "docs": [
          {
            "type": "truncatedBlock",
            "nodes": [
              {
                "type": "paragraph",
                "spans": [
                  {
                    "text": "A simple method",
                    "style": "Plain"
                  }
                ]
              }
            ],
            "level": "SingleLine"
          }
        ]
      },
      {
        "name": "is_ready",
        "kind": "method",
        "hasDefault": true,
        "signature": [
          {
            "text": "fn",
            "style": "Keyword"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "is_ready",
            "style": "Plain",
            "url": "https://docs.rs/fixture-crate/0.1.0/fixture_crate/trait.ComplexTrait.html#method.is_ready",
            "path": "fixture_crate::ComplexTrait::is_ready"
          },
          {
            "text": "(",
            "style": "Punctuation"
          },
          {
            "text": "&",
            "style": "Punctuation"
          },
          {
            "text": "self",
            "style": "Plain"
          },
          {
            "text": ")",
            "style": "Punctuation"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "->",
            "style": "Operator"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "bool",
            "style": "TypeName"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "{",
            "style": "Punctuation"
          },
          {
            "text": " ... ",
            "style": "Plain"
          },
          {
            "text": "}",
            "style": "Punctuation"
          }
        ],
        "docs": [
          {
            "type": "truncatedBlock",
            "nodes": [
              {
                "type": "paragraph",
                "spans": [
                  {
                    "text": "A method with default implementation",
                    "style": "Plain"
                  }
                ]
              }
            ],
            "level": "SingleLine"
          }
        ]
      },
      {
        "name": "transform",
        "kind": "method",
        "signature": [
          {
            "text": "fn",
            "style": "Keyword"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "transform",
            "style": "Plain",
            "url": "https://docs.rs/fixture-crate/0.1.0/fixture_crate/trait.ComplexTrait.html#method.transform",
            "path": "fixture_crate::ComplexTrait::transform"
          },
          {
            "text": "<",
            "style": "Punctuation"
          },
          {
            "text": "U",
            "style": "Generic"
          },
          {
            "text": ">",
            "style": "Punctuation"
          },
          {
            "text": "(",
            "style": "Punctuation"
          },
          {
            "text": "&",
            "style": "Punctuation"
          },
          {
            "text": "self",
            "style": "Plain"
          },
          {
            "text": ",",
            "style": "Punctuation"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "data",
            "style": "Plain"
          },
          {
            "text": ":",
            "style": "Punctuation"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "U",
            "style": "Generic"
          },
          {
            "text": ")",
            "style": "Punctuation"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "->",
            "style": "Operator"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "Result",
            "style": "TypeName",
            "url": "https://doc.rust-lang.org/nightly/core/result/enum.Result.html",
            "path": "core::result::Result"
          },
          {
            "text": "<",
            "style": "Punctuation"
          },
          {
            "text": "T",
            "style": "Generic"
          },
          {
            "text": ",",
            "style": "Punctuation"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "String",
            "style": "TypeName",
            "url": "https://doc.rust-lang.org/nightly/alloc/string/struct.String.html",
            "path": "alloc::string::String"
          },
          {
            "text": ">",
            "style": "Punctuation"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "where",
            "style": "Keyword"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "U",
            "style": "Generic"
          },
          {
            "text": ":",
            "style": "Punctuation"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "Into",
            "style": "TypeName",
            "url": "https://doc.rust-lang.org/nightly/core/convert/trait.Into.html",
            "path": "core::convert::Into"
          },
          {
            "text": "<",
            "style": "Punctuation"
          },
          {
            "text": "T",
            "style": "Generic"
          },
          {
            "text": ">",
            "style": "Punctuation"
          },
          {
            "text": ";",
            "style": "Punctuation"
          }
        ],
        "docs": [
          {
            "type": "truncatedBlock",
            "nodes": [
              {
                "type": "paragraph",
                "spans": [
                  {
                    "text": "A method with complex generics",
                    "style": "Plain"
                  }
                ]
              }
            ],
            "level": "SingleLine"
          }
        ]
      }
    ]
  }
}
