ferritin/src/snapshots/ferritin__tests__get_trait_complex_test_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::ComplexTrait\"), OutputMode ::\nTestMode, & get_fixture_crate_path ())"
---
<metadata>
  <field name="Item">ComplexTrait</field>
  <field name="Kind">Trait</field>
  <field name="Visibility">Public</field>
  <field name="Defined at"><type-name>fixture_crate</type-name><punctuation>::</punctuation><type-name>ComplexTrait</type-name></field>
  <field name="In crate">fixture-crate (0.1.0)</field>
</metadata>
<truncated level="full"><p>
A more complex trait demonstrating various features</p>
</truncated>
<generated-code>
<keyword>trait</keyword> <type-name>ComplexTrait</type-name><punctuation><</punctuation><generic>T</generic><punctuation>></punctuation> <keyword>where</keyword> <generic>T</generic><punctuation>:</punctuation> <type-name>Clone</type-name> + <type-name>Send</type-name> <punctuation>{</punctuation> ... <punctuation>}</punctuation></generated-code>
<list>
  <item><p>
<keyword>type</keyword> <type-name>Output</type-name><punctuation>:</punctuation> <type-name>std::fmt::Display</type-name><punctuation>;</punctuation> </p>
<truncated level="single-line"><p>
An associated type</p>
</truncated>
</item>
  <item><p>
<keyword>const</keyword> MAX_SIZE<punctuation>:</punctuation> <type-name>usize</type-name> <operator>=</operator> <inline-rust-code>100</inline-rust-code><punctuation>;</punctuation> </p>
<truncated level="single-line"><p>
An associated constant</p>
</truncated>
</item>
  <item><p>
<keyword>fn</keyword> process<punctuation>(</punctuation><punctuation>&</punctuation>self<punctuation>,</punctuation> input<punctuation>:</punctuation> <generic>T</generic><punctuation>)</punctuation> <operator>-></operator> <generic>Self</generic><punctuation>::</punctuation><type-name>Output</type-name><punctuation>;</punctuation> </p>
<truncated level="single-line"><p>
A simple method</p>
</truncated>
</item>
  <item><p>
<keyword>fn</keyword> is_ready<punctuation>(</punctuation><punctuation>&</punctuation>self<punctuation>)</punctuation> <operator>-></operator> <type-name>bool</type-name> <punctuation>{</punctuation> ... <punctuation>}</punctuation> </p>
<truncated level="single-line"><p>
A method with default implementation</p>
</truncated>
</item>
  <item><p>
<keyword>fn</keyword> transform<punctuation><</punctuation><generic>U</generic><punctuation>></punctuation><punctuation>(</punctuation><punctuation>&</punctuation>self<punctuation>,</punctuation> data<punctuation>:</punctuation> <generic>U</generic><punctuation>)</punctuation> <operator>-></operator> <type-name>Result</type-name><punctuation><</punctuation><generic>T</generic><punctuation>,</punctuation> <type-name>String</type-name><punctuation>></punctuation> <keyword>where</keyword> <generic>U</generic><punctuation>:</punctuation> <type-name>Into</type-name><punctuation><</punctuation><generic>T</generic><punctuation>></punctuation><punctuation>;</punctuation> </p>
<truncated level="single-line"><p>
A method with complex generics</p>
</truncated>
</item>
</list>
